--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,19 +15,11 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16'
-      
-      - name: 🚚 Cache node modules
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
   
       - name: 🚚 build project
         run: |
           npm install
-          # npm run build
+          npm run build
         env:
           CI: ""
       
