--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "emailjs-com": "^2.6.4",
+    "leaflet": "^1.9.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-leaflet": "^3.2.5",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
-    "smooth-scroll": "^16.1.3"
+    "smooth-scroll": "^16.1.3",
+    "socket.io-client": "^4.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
