--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
     "emailjs-com": "^2.6.4",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^5.2.1",
     "react-leaflet": "^3.2.5",
-    "react-router-dom": "^6.23.1",
+    "react-router-dom": "^6.24.1",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
