--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "landingpage-react-template",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -12,6 +15,7 @@
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^17.0.1",
     "react-icons": "^5.2.1",
     "react-leaflet": "^3.2.5",
